# Orlando

./: .gitignore  .npmignore  CHANGELOG.md  CONTEXT.md  Cargo.toml  PUBLISHING.md  README.md  TESTING.md  book.toml  netlify.toml  package.json  test_take_fix.html
.cargo/: config.toml
.githooks/: README.md  pre-commit  pre-push
.github/workflows/: benchmark.yml  docs.yml  publish.yml  test.yml
benches/: performance.rs
benchmarks/: BENCHMARK_RESULTS.md  README.md  comparison.js
book/src/: SUMMARY.md  getting-started.md  introduction.md
book/src/api/: geometric.md  migration.md  optics.md  pipeline.md  profunctor.md  reactive.md  rust.md
book/src/examples/: data-pipelines.md  geometric-algebra.md  optics-patterns.md  reactive-state.md
book/theme/: custom.css
docs/: API_EXPANSION_ROADMAP.md  BENCHMARK_METHODOLOGY.md  FUSION_OPTIMIZATION.md  HYBRID_COMPOSITION.md  OPTIMIZATIONS.md  PHASE_6_OPTICS_IMPLEMENTATION_PLAN.md  WASM_BOUNDARY_PERFORMANCE.md
docs/api/: JAVASCRIPT.md  MIGRATION.md
examples/: REACT_QUICKSTART.md  advanced-collectors.html  basic.html  benchmark-comparison.html  collection-utilities.html  data-processing.html  index.html  logic-functions.html  pagination.html  performance.html  phase2b_operations.js  react-basic-example.jsx  statistical-operations.html
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_collectors.rs  fuzz_transducer_pipeline.rs
proptest-regressions/: optics.txt
scripts/: setup-hooks.sh
src/: collectors.rs  geometric_optics.rs  geometric_optics_wasm.rs  iter_ext.rs  lib.rs  logic.rs  optics.rs  optics_wasm.rs  pipeline.rs  profunctor.rs  signal.rs  simd.rs  step.rs  stream.rs  transducer.rs  transforms.rs
tests/: integration.rs  property_tests.rs  wasm_tests.rs
