[package]
name = "orlando"
version = "0.1.0"
edition = "2021"
authors = ["Elliott Hall"]
description = "Compositional data transformation with transducers"
license = "MIT"
repository = "https://github.com/yourusername/orlando"
keywords = ["transducers", "wasm", "data-transformation", "functional"]
categories = ["wasm", "data-structures"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
proptest = "1.4"
quickcheck = "1.0"
quickcheck_macros = "1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = "0.5"
proptest = "1.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.release.package."*"]
opt-level = "z"

[[bench]]
name = "performance"
harness = false
required-features = []
